--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+serde = { version = "1", features = [ "derive" ] }
+tokio = { version = "1", features = ["full"] }
+anyhow = "1"
+serde_json = "1"
+thiserror = "1"
