--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+actix-cors = "*"
 serde = { version = "1", features = [ "derive" ] }
 tokio = { version = "1", features = ["full"] }
 anyhow = "1"
