--- a/website/Cargo.toml
+++ b/website/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2021"
 
 [dependencies]
 yew = "0.19"
+web-sys = "*"
+gloo-console = "0.2"
+gloo-net = "0.2"
+serde = { version = "1", features = [ "derive" ] }
+serde_json = "1"
+wasm-bindgen-futures = "0.4"
