--- a/website/Cargo.toml
+++ b/website/Cargo.toml
@@ -13,3 +13,4 @@ gloo-net = "0.2"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
 wasm-bindgen-futures = "0.4"
+js-sys = "0.3.60"
