--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -8,8 +8,9 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 actix-cors = "*"
-serde = { version = "1", features = [ "derive" ] }
+actix-files = "*"
 tokio = { version = "1", features = ["full"] }
 anyhow = "1"
 serde_json = "1"
 thiserror = "1"
+common = { path = "../common" }
