--- a/website2/Cargo.toml
+++ b/website2/Cargo.toml
@@ -5,8 +5,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib"]
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3.18"
+
 [dependencies]
-web-sys = "*"
+# web-sys = "*"
 # gloo-console = "0.2"
 # gloo-net = "0.2"
 serde = { version = "1", features = [ "derive" ] }
@@ -14,3 +20,13 @@ serde_json = "1"
 wasm-bindgen-futures = "0.4"
 # js-sys = "0.3.60"
 common = { path = "../common" }
+seed = "0.8.0"
+
+
+[profile.release]
+lto = true
+opt-level = 'z'
+codegen-units = 1
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ['-Os']
