--- a/website2/Cargo.toml
+++ b/website2/Cargo.toml
@@ -18,7 +18,7 @@ wasm-bindgen-test = "0.3.18"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
 wasm-bindgen-futures = "0.4"
-# js-sys = "0.3.60"
+js-sys = "0.3.60"
 common = { path = "../common" }
 seed = "0.9"
 
