--- a/website/Cargo.toml
+++ b/website/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "website2"
-version = "0.1.0"
+name = "website"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,7 +9,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dev-dependencies]
-wasm-bindgen-test = "0.3.18"
+wasm-bindgen-test = "0.3"
 
 [dependencies]
 # web-sys = "*"
@@ -18,7 +18,7 @@ wasm-bindgen-test = "0.3.18"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
 wasm-bindgen-futures = "0.4"
-js-sys = "0.3.60"
+js-sys = "0.3"
 common = { path = "../common" }
 seed = "0.9"
 
