--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -12,6 +12,7 @@ actix-files = "*"
 tokio = { version = "1", features = ["full"] }
 anyhow = "1"
 serde_json = "1"
+serde = { version = "1", features = [ "derive" ] }
 thiserror = "1"
 common = { path = "../common" }
 lazy_static = "1"
